tests/NormalTests/paczka1/small_fuzzy/63033002.err
Error in line 1: MtH A176 6,7
Error in line 5: XcMHn5 S22 86,2
Error in line 2: MtH S22 43,6
